--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,54 @@
-body {
-  margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+* {
+  box-sizing: border-box;
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+body {
+  padding: 10px;
+  font-family: sans-serif;
+}
+
+.date-time-form {
+  text-align: center;
+}
+
+h1 {
+  text-transform: uppercase;
+  margin-bottom: 50px;
+}
+
+.error-msg {
+  color: #ff0000;
+  text-transform: uppercase;
+  font-weight: bold;
+  letter-spacing: 1px;
+}
+
+.react-datetime-picker {
+  padding-left: 10px;
+}
+
+.counter {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: center;
+  width: 70%;
+  margin: 100px auto;
+  padding: 10px;
+  background: linear-gradient(25deg, #191f20, #621baa, #049fda, #9dcfe4, #f6efe9);
+}
+
+.counter .time {
+  margin-right: 30px;
+}
+
+.counter .time-value {
+  padding: 1px;
+  font-size: 500%;
+  color: #fff;
+  line-height: 1;
+}
+
+.time-label {
+  text-align: center;
+  font-size: 20px;
 }
